[package]
name = "rust_gl"
version = "0.1.0"
authors = ["Zachary Wells <8bitslime@gmail.com>"]
edition = "2018"

[profile.dev]
debug = true

[dependencies]
glutin = "0.22.0-alpha5"
glam   = "0.8.3"
gl     = "0.14.0"
image = "0.22.3"
mol = { git = "https://github.com/MLJWare/mol.git", branch = "todo/vector-type"}
